--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: "Packages Split"
+name: "Split packages"
 
 on:
   push:
@@ -7,54 +7,52 @@ on:
     tags:
       - "*"
 
-env:
-  # 1. for Github split
-  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 jobs:
   packages_split:
     runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: false
       matrix:
-        # define package to repository map
         package:
-          - local_path: "button"
-            split_repository: "button-component"
-          - local_path: "input"
-            split_repository: "input-component"
-
+          - local_path: "packages/button"
+            github_account: "gatsbywpthemes"
+            github_repository: "button-component"
+            deploy_key: "BUTTON_DEPLOY_KEY"
+            target_branch: "main"
+          - local_path: "packages/input"
+            github_account: "gatsbywpthemes"
+            github_repository: "input-component"
+            deploy_key: "INPUT_DEPLOY_KEY"
+            target_branch: "main"
     steps:
       - uses: actions/checkout@v2
-
-      # no tag
       - if: "!startsWith(github.ref, 'refs/tags/')"
-        uses: "symplify/monorepo-split-github-action@2.1"
+        name: "Update package repository"
+        uses: alphpaca/monoplus-split-action@2022.1-alpha3
         with:
-          # ↓ split "packages/easy-coding-standard" directory
-          package_directory: "packages/${{ matrix.package.local_path }}"
+          package_path: "${{ matrix.package.local_path }}"
+          ssh_private_key: ${{ secrets[matrix.package.deploy_key] }}
+          git_username: "gatsbywpthemes"
+          git_email: "gatsbywpthemes@gmail.com"
+          repository_owner: "${{ matrix.package.github_account }}"
+          repository_name: "${{ matrix.package.github_repository }}"
+          target_branch: "${{ matrix.package.target_branch }}"
 
-          # ↓ into https://github.com/symplify/easy-coding-standard repository
-          repository_organization: "gatsbywpthemes"
-          repository_name: "${{ matrix.package.split_repository }}"
-
-          # ↓ the user signed under the split commit
-          user_name: "gatsbywpthemes"
-          user_email: "gatsbywpthemes@gmail.com"
-
-      # with tag
       - if: "startsWith(github.ref, 'refs/tags/')"
-        uses: "symplify/monorepo-split-github-action@2.1"
+        name: Extract tag
+        id: extract_tag
+        run: echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
+
+      - if: "startsWith(github.ref, 'refs/tags/')"
+        name: "Create package tag"
+        uses: alphpaca/monoplus-split-action@2022.1-alpha3
+
         with:
-          tag: ${GITHUB_REF#refs/tags/}
-
-          # ↓ split "packages/easy-coding-standard" directory
-          package_directory: "packages/${{ matrix.package.local_path }}"
-
-          # ↓ into https://github.com/symplify/easy-coding-standard repository
-          repository_organization: "gatsbywpthemes"
-          repository_name: "${{ matrix.package.split_repository }}"
-
-          # ↓ the user signed under the split commit
-          user_name: "gatsbywpthemes"
-          user_email: "gatsbywpthemes@gmail.com"
+          package_path: "${{ matrix.package.local_path }}"
+          ssh_private_key: ${{ secrets[matrix.package.deploy_key] }}
+          git_username: "gatsbywpthemes"
+          git_email: "gatsbywpthemes@gmail.com"
+          repository_owner: "${{ matrix.package.github_account }}"
+          repository_name: "${{ matrix.package.github_repository }}"
+          target_branch: "${{ matrix.package.target_branch }}"
+          tag: ${{ steps.extract_tag.outputs.TAG }}
